update index page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mechanical Technician Portfolio</title>
+    <title>Makram Saaden</title>
+    <link rel="icon" type="image/x-icon" href="assets/1689343234874.jpg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -62,7 +63,9 @@
                         <span style="animation-delay: 2.0s">a</span>
                         <span style="animation-delay: 2.1s">n</span>
                     </h2>
-                    <p class="lead">Specialized in Industrial Equipment Maintenance and Repair</p>
+                    <p class="lead">Specialized in Automotive Diagnostics, Electrical Systems, and Mechanical
+                        Maintenance.
+                    </p>
                 </div>
             </div>
         </div>
@@ -160,7 +163,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Automotive Technician</h3>
-                        <h4>Landolsi motors</h4>
+                        <h4>Landolsi motors | Sousse, Tunisia</h4>
                         <p class="timeline-date">July 2024 – Present</p>
                         <p class="experience-list">
                             Proficient in diagnostics using VCDS, Maxisys, Autel, and Diagzone tools
@@ -173,7 +176,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Automobile Mechanics Internship</h3>
-                        <h4>Multibrand Mechanics Garage</h4>
+                        <h4>Multibrand Mechanics Garage | Médenine, Tunisia</h4>
                         <p class="timeline-date">2024/02 - 2024/04</p>
                         <p class="experience-list">
                             Diagnostic, maintenance, and repair of vehicles. Development of
@@ -185,14 +188,73 @@
 
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Junior Maintenance Technician</h3>
-                        <h4>Engineering Solutions Ltd.</h4>
-                        <p class="timeline-date">2014 - 2016</p>
-                        <ul class="experience-list">
-                            <li>Assisted senior technicians with equipment maintenance and repairs</li>
-                            <li>Conducted regular equipment inspections and basic maintenance tasks</li>
-                            <li>Participated in safety training and certification programs</li>
-                        </ul>
+                        <h3>Automobile Mechanics Internship</h3>
+                        <h4>Multibrand Mechanics Garage | Médenine, Tunisia</h4>
+                        <p class="timeline-date">2023/09 - 2023/11</p>
+                        <p class="experience-list">
+                            During this internship, I had the opportunity to enhance my skills in automobile mechanics
+                            by working on a variety of vehicles.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Automobile Mechanics Internship</h3>
+                        <h4>Multibrand Mechanics Garage | Medninne, Tunisia</h4>
+                        <p class="timeline-date">2023/02 - 2023/04</p>
+                        <p class="experience-list">
+                            During this internship, I had the opportunity to gain practical experience in repairing and
+                            maintaining vehicles from various brands.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Automobile Mechanics Internship</h3>
+                        <h4>Multibrand Mechanics Garage | Medninne, Tunisia</h4>
+                        <p class="timeline-date">2022/09 - 2022/11</p>
+                        <p class="experience-list">
+                            Gained electrical experience through the design, installation, and maintenance of electrical
+                            systems. Supervised by experts, developed essential practical skills in electricity.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Automobile Mechanics Internship</h3>
+                        <h4>Multibrand Mechanics Garage| Sfax, Tunisia</h4>
+                        <p class="timeline-date">2022/02 - 2022/04 </p>
+                        <p class="experience-list">
+                            This internship allowed me to develop my technical skills in automobile mechanics and deepen
+                            my understanding of car mechanical systems.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="experience" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Education</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Automotive Mechanical and Electrical Technician</h3>
+                        <h4>The Vocational Training and Development Centerin Maknassy Tunisia</h4>
+                        <p class="timeline-date">2021 - 2024</p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Baccalaureate in Science and Technology </h3>
+                        <h4>Chawki Nasri Secondary School</h4>
+                        <p class="timeline-date">2021</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +262,7 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="py-5 bg-light">
+    <section id="certifications" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Professional Certifications</h2>
             <div class="row justify-content-center">
